--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Flask==2.0.1
 flask-cors==3.0.10
 flask-login==0.5.0
 flask-socketio==5.1.1
-mysqlclient==2.0.3
 python-engineio==4.3.0
 python-socketio==5.4.1
 Werkzeug==2.0.1
 gunicorn==20.1.0
+python-dotenv==0.19.1
+mysql-connector-python==8.0.28
+psycopg2-binary==2.9.3
